--- a/app/views/guitars/new.html.erb
+++ b/app/views/guitars/new.html.erb
@@ -15,7 +15,7 @@
       </ul>
       <ul class="nav nav-sidebar">
         <li><a href="/dealers">List all Dealer</a></li>
-        <li><a href="#">Add New Dealer</a></li>
+        <li><%= link_to "Add Dealer", new_dealer_path %></li>
       </ul>
     </div>
 
