--- a/app/views/guitars/edit.html.erb
+++ b/app/views/guitars/edit.html.erb
@@ -2,21 +2,24 @@
   <div class="row">
     <div class="col-sm-4 col-md-2 sidebar white">
       <ul class="nav nav-sidebar">
-        <li class="active"><%= link_to "List all Guitar", guitars_path %></li>
-        <li><%= link_to "Add New Guitar", new_guitar_path %></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><%= link_to "List all Purchase Order", purchase_orders_path %></li>
-        <li><%= link_to "New Purchase", new_purchase_order_path %></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><%= link_to "List all Customer", customers_path %></li>
-        <li><%= link_to "Add Customer", new_customer_path %></li>
-      </ul>
-      <ul class="nav nav-sidebar">
-        <li><%= link_to "List all Dealer", dealers_path %></li>
-        <li><%= link_to "Add New Dealer", new_dealer_path %></li>
-      </ul>
+        
+          <li class="active"><%= link_to "List all Guitar", guitars_path %></li>
+        <% if current_user.admin? %>
+          <li><%= link_to "Add New Guitar", new_guitar_path %></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><%= link_to "List all Purchase Order", purchase_orders_path %></li>
+          <li><%= link_to "New Purchase", new_purchase_order_path %></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><%= link_to "List all Customer", customers_path %></li>
+          <li><%= link_to "Add Customer", new_customer_path %></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><%= link_to "List all Dealer", dealers_path %></li>
+          <li><%= link_to "Add New Dealer", new_dealer_path %></li>
+        </ul>
+        <% end -%>
     </div>
 
     <div class="col-md-9 main white">
